# projet1_MS01

./: .gitignore  CMakeLists.txt  benchmark_results.csv  data_gauss-seidel.csv  data_gauss-seidel_para.csv  data_gauss_seidel.csv  data_jacobi.csv  data_jacobi_para.csv  plot.py  run_cholesky.sh  run_single_test.sh  submit_all_jobs.sh  test_jacobi_para.cpp
.cache/clangd/index/: gauss-seidel.cpp.2996F04425D7E39B.idx  gauss-seidel_para.cpp.BFDE014B6A87A08A.idx  jacobi.cpp.E5CEAE3F39187533.idx  jacobi_para.cpp.0CA156D5FFFAEA10.idx
data/: data_gauss-seidel.csv  data_gauss-seidel_para.csv  plot.py
rapport/: rapport.tex
results_cholesky/: final_results.csv  result_Gauss-Seidel_Faible_p1.csv  result_Gauss-Seidel_Faible_p16.csv  result_Gauss-Seidel_Faible_p2.csv  result_Gauss-Seidel_Faible_p20.csv  result_Gauss-Seidel_Faible_p32.csv  result_Gauss-Seidel_Faible_p4.csv  result_Gauss-Seidel_Faible_p64.csv  result_Gauss-Seidel_Forte_p1.csv  result_Gauss-Seidel_Forte_p16.csv  result_Gauss-Seidel_Forte_p2.csv  result_Gauss-Seidel_Forte_p20.csv  result_Gauss-Seidel_Forte_p32.csv  result_Gauss-Seidel_Forte_p4.csv  result_Gauss-Seidel_Forte_p64.csv  result_Jacobi_Faible_p1.csv  result_Jacobi_Faible_p16.csv  result_Jacobi_Faible_p2.csv  result_Jacobi_Faible_p20.csv  result_Jacobi_Faible_p32.csv  result_Jacobi_Faible_p4.csv  result_Jacobi_Faible_p64.csv  result_Jacobi_Forte_p1.csv  result_Jacobi_Forte_p16.csv  result_Jacobi_Forte_p2.csv  result_Jacobi_Forte_p20.csv  result_Jacobi_Forte_p32.csv  result_Jacobi_Forte_p4.csv  result_Jacobi_Forte_p64.csv  result_Jacobi_Forte_p8.csv
results_cholesky_smol/: final_results.csv
results_cholesky_weak/: final_results.csv
results_local/: local_results.csv
scripts/: diag_cholesky.sh  submit_all_jobs.sh
source/: gauss-seidel.cpp  gauss-seidel_para.cpp  jacobi.cpp  jacobi_para.cpp  test_gauss_seidel.cpp  test_jacobi.cpp  test_jacobi_para.cpp
